--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="w-100 m-0 p-0">
 <head>
 	<title>Colin Chartier | Startups, software</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="/static/bootstrap.min.css"
 		  crossorigin="anonymous">
 </head>
-<body>
+<body class="w-100 m-0 p-0">
 <header>
 	<nav class="navbar navbar-light navbar-expand-sm">
 		<script>
@@ -38,7 +38,7 @@
 		<div class="container mx-auto px-0 my-0">
 			<img
 					class="navbar-brand"
-					src="/static/logo-dark.svg"
+					src="/static/logo/logo-dark.svg"
 					alt="C2"
 					style="height: 2em; width: auto;"
 			>
@@ -73,7 +73,7 @@
 		</div>
 	</nav>
 </header>
-<div id="app"></div>
+<div id="app" class="w-100 m-0 p-0"></div>
 <script src="dist/main.js"></script>
 </body>
 </html>
