Finish essay logic & first essay

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 </head>
 <body>
 <div id="app" class="w-100 m-0 p-0"></div>
-<script src="dist/bundle.js"></script>
+<script src="/dist/bundle.js"></script>
 </body>
 </html>
